--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </marquee>   
             <font align="center"><h2>HI! I'm Pavitra Gautam</h2></font>
           <p><font size="4"> <h4>I am from Ghaziabad, Uttar Pradesh. It is sometimes referred to as the "Gatewayof Uttar Pradesh" because it is close to New Delhi, on the main route into Uttar Pradesh. I Love singing, listening music, Painting and Drawing. I'm a Philomath who is always ready to learn new things. Currently I'm studing in Indian Institute of Information technology, Bhagalpur and from Computer Science and Engineering Branch. Hope to have great 4 years ahead.<h4></font></p>
-        	<center><img src ="C:\Users\PAVITRA GAUTAM\Documents\pavitra.jpg.jpg" weidht="300" height="150" border="5" align="center"></center>
+        	<center><img src ="https://drive.google.com/thumbnail?id=15-2R0ZAjGu5toaMJXnv_tZd5U9y0FQmE" weidht="300" height="150" border="5" align="center"></center>
 
 <table border="0" width="100%" cellpadding="0" cellspacing="0" bgcolor="#292929">
     <tr>
